# inference-radar

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
data/: intel_report.txt
docs/: handoff.md  youtube_oauth.md
radar/: __init__.py  __main__.py  _llm.py  brief.py  classify.py  comments.py  db.py  enrich.py  export.py  firsts.py  gh.py  ingest.py  intel.py  issue_alerts.py  label.py  mint_youtube_token.py  papers.py  pr_alerts.py  run_all.py
radar/migrations/: 0001_initial.sql  0002_classify_brief.sql
radar/prompts/: brief_v1.md  classify_v1.md  firsts_system_v1.md  issue_alerts_v1.md  pr_alerts_v1.md
radar/templates/: slide.md.j2
seed/: categories_seed.yml  repos.yml
site/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
site/app/: globals.css  layout.tsx  page.tsx
site/app/briefings/: page.tsx
site/app/firsts/: page.tsx
site/app/pr/[id]/: page.tsx
site/app/repo/[slug]/: page.tsx
site/data/: briefings.json  categories.json  firsts.json  index.json  prs.json  repos.json
site/lib/: data.ts
tests/: test_brief_and_export.py  test_classify.py  test_verifier.py
