[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inference-radar"
version = "0.1.0"
description = "Narrow good-first-issue filter for inference-stack repos (vllm, sglang, megatron, tensorrt-llm)"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Lily Su", email = "lilyxsu@gmail.com" }]
dependencies = [
    "aiosqlite>=0.22.1",
    "httpx>=0.27",
    "structlog",
    "pyyaml",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["radar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
